# DocoleChat

./: .gitignore  CMakeLists.txt  Dockerfile  README.adoc  README.md  gen_msvc_2020.bat
backend/AutoriseChat/: AutoriseChat.csproj  AutoriseChat.sln  Program.cs  appsettings.json
backend/AutoriseChat/ModuleServices/: TokenValidator.cs
backend/AutoriseChat/Properties/: launchSettings.json
backend/AutoriseChat/Protos/: auth.proto  greet.proto
backend/AutoriseChat/Services/: AuthService.cs  GreeterService.cs
backend/ChatServer/: ChatServer.csproj  ChatServer.sln  Program.cs
backend/ChatServer/Properties/: launchSettings.json
backend/ChatServer/Protos/: chat-server.proto  greet.proto
backend/ChatServer/Services/: ChatServerService.cs  GreeterService.cs
backend/irc-backend/: Dockerfile  Program.cs  appsettings.json  irc-backend.csproj  token-passwords.json
backend/irc-backend/Models/: Channel.cs  User.cs  UserMessage.cs
backend/irc-backend/Protos/: greet.proto
backend/irc-backend/Services/: AuthService.cs  ChannelService.cs  GreeterService.cs  IrcService.cs
client/qt/: CMakeLists.txt
client/qt/src/: ircclient.cpp  ircclient.h  ircserver.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  message.cpp  message.h
frontend/cli/: CMakeLists.txt
frontend/cli/src/: main.cpp
frontend/qt/: CMakeLists.txt  Dockerfile  README.adoc
frontend/qt/src/: ChannelListWidget.cpp  ChannelListWidget.h  channelwidget.cpp  channelwidget.h  chatwidget.cpp  chatwidget.h  chatwidget.ui  ircclient.cpp  ircclient.h  ircserver.cpp  ircserver.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
proto/: irc.proto
sockets/: CMakeLists.txt
sockets/client/: CMakeLists.txt
sockets/client/src/: main.cpp
sockets/server/: CMakeLists.txt
sockets/server/src/: main.cpp
src/: mainwindow.h
